$Id$

2007-03-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Incremented version number to 1.9.1.

	* ike-vendor-ids, ike-backoff-patterns: various minor changes and
	  additions.

2007-01-26 Roy Hills <Roy.Hills@nta-monitor.com>

	* Released v1.9  Tarball size: 1412689, Zip size: 2260655.
	  tarball md5sum: bed63c7d2f54c482525a735be7b5e720
	  Zip md5sum: 5a224a60235189ba1b8882c98e09489c

2007-01-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Refactored display_packet() to ensure that payload
	  is correctly aligned.

2007-01-13 Roy Hills <Roy.Hills@nta-monitor.com>

	* check-decode: New tests for pkt-main-natt-response,
	  pkt-aggr-cert-response, pkt-v2-notify-response and
	  pkt-checkpoint-notify.

	* check-packet: New test for pkt-single-trans.

	* ike-scan.c: Added conditional code to write received IKE packet to
	  a file.  This is used to create data files for use with check-decode,
	  and is not intended for production use.

	* psk-crack.h: Include <sys/time.h> and <time.h>.

	* ike-scan.c: Added O_TRUNC option to writepkttofile open() call.

2007-01-02 Roy Hills <Roy.Hills@nta-monitor.com>

	* check-psk-crack-4: New checking script to improve coverage of
	  psk-crack.c and hash_functions.h.  Test coverage for these
	  source files is now:

	  96.88% of 64 lines executed in file hash_functions.h
	  95.28% of 318 lines executed in file psk-crack.c

	* check-packet, check-decode: Added new tests to improve coverage of
	  ike-scan.c and isakmp.c.  Test coverage for these files is
	  now:

	  71.18% of 1957 lines executed in file ike-scan.c
	  69.61% of 964 lines executed in file isakmp.c

	* ike-scan.c, ike-scan.h: Added new --readpktfromfile option.
	  This option reads the packet from the specified file rather
	  than from the network.  It is intended for debugging and
	  testing purposes, to allow the IKE packet decoding to be
	  easily checked.  This option is not documented, because it is
	  designed purely for testing.
