@@ -133,6 +133,13 @@ typedef struct {
 
 /* Functions */
 
+#ifndef HAVE_STRLCAT
+size_t strlcat(char *dst, const char *src, size_t siz);
+#endif
+#ifndef HAVE_STRLCPY
+size_t strlcpy(char *dst, const char *src, size_t siz);
+#endif
+
 static unsigned load_psk_params(const char *, const char *);
 static inline unsigned char *compute_hash(const psk_entry *, const char *);
 static FILE *open_dict_file(const char *);
